[fix] removing value that forced a witdh overlapping in smaller screens

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -41,7 +41,6 @@
 }
 
 .form-field-width {
-  width: 500px;
   margin-left: auto;
   margin-right: auto;
 }
